# service

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
server/: Cargo.toml  Dockerfile
server/src/: lib.rs  main.rs  mongo.rs
server/src/crypto/: asset.rs  circuit.rs  hasher.rs  id.rs  mod.rs  note.rs  tx.rs  wallet.rs
server/src/routes/: error.rs  messages.rs  mod.rs  notes.rs  nullifier.rs  response.rs  schema.rs  users.rs
src/: lib.rs  main.rs  mongo.rs
src/routes/: error.rs  messages.rs  mod.rs  notes.rs  nullifier.rs  response.rs  schema.rs  users.rs
