[workspace]
default-members = ["server"]
members = [
  "server",
]
resolver = "2"

[workspace.package]
name = "service"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
ark-bn254 = {version = "0.4.0"}
ark-crypto-primitives = {version = "^0.4.0", default-features = false, features = ["sponge", "crh", "merkle_tree"]}
ark-ec = {version = "^0.4.0", default-features = false}
ark-ff = {version = "^0.4.0", default-features = false}
ark-serialize = {version = "^0.4.0", default-features = false}
ark-std = {version = "^0.4.0", default-features = false}
arkeddsa = {git = "https://github.com/kilic/arkeddsa"}
digest = "^0.10.0"
rand = "0.8"
rand_core = {version = "0.6", default-features = false}
sha2 = {version = "0.10", default-features = false}
axum = "0.7"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
