[package]
name = "service_http"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"
rust-version = "1.75"

[[bin]]
path = "src/main.rs"
name = "service-http"

[dependencies]
ark-bn254 = {version = "0.4.0"}
ark-crypto-primitives = {version = "^0.4.0", default-features = false, features = ["sponge", "crh", "merkle_tree"]}
ark-ec = {version = "^0.4.0", default-features = false}
ark-ff = {version = "^0.4.0", default-features = false}
ark-serialize = {version = "^0.4.0", default-features = false}
ark-std = {version = "^0.4.0", default-features = false}
arkeddsa = {git = "https://github.com/kilic/arkeddsa"}
rand = "0.8"
tower-http = { version = "0.4", features = ["cors"] }
rand_core = {version = "0.6", default-features = false}
sha2 = {version = "0.10", default-features = false}
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
mongodb = { version = "2.7.0", features = ["bson-chrono-0_4"] }
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4"
thiserror = "1.0.40"
axum-extra = "0.9.3"
hex = "0.4.3"
ed25519-dalek = "1.0.1"
futures = "0.3.30"
async-session = "3.0.0"
uuid = { version = "1", features = ["v4"] }
log = "0.4.17"
env_logger = "0.11.0"
error-stack = "0.5.0"
