[package]
name = "service_http"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
path = "src/main.rs"
name = "service-http"

[dependencies]
ark-bn254.workspace = true
ark-crypto-primitives.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
arkeddsa.workspace = true
digest.workspace = true
rand.workspace = true
rand_core.workspace = true
sha2.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
mongodb.workspace = true
bson.workspace = true
chrono.workspace = true
thiserror.workspace = true 